--- a/ri/README.adoc
+++ b/ri/README.adoc
@@ -1,8 +1,11 @@
 = Problem Details Dummy Implementation for JAX-RS
 
-This is a JAX-RS dummy implementation for the Problem Details API. It's just a dummy, because
+This is a JAX-RS dummy implementation for the Problem Details API. It's just a dummy, because:
 
-a. it's not built into the container, you'll have to build it into your applications
+a. it's not built into the container, you'll have to package it into your applications, which means they are not a thin war any more.
 
 b. it doesn't handle `@Valid` annotated parameters and other exceptions that the container produces.
 
+c. the exceptions on the client side are wrapped in a ResponseProcessingException.
+
+It implements an `ExceptionMapper` for the server side and a `ClientResponseFilter` for the client.
