--- a/ri-spring/README.adoc
+++ b/ri-spring/README.adoc
@@ -1,3 +1,11 @@
 = Problem Details Implementation for Spring Boot
 
 This is an implementation of the Problem Details API for Spring Boot.
+
+Uses JSON-B under the hood.
+
+== Client
+
+`ProblemDetailJsonToExceptionBuilder.register(OutOfCreditException.class);`
+
+`template.setErrorHandler(new ProblemDetailErrorHandler());`
