--- a/api/README.adoc
+++ b/api/README.adoc
@@ -1,3 +1,21 @@
 = Problem Details API
 
 This is the API for the Problem Details.
+
+== Mappings
+
+=== Type
+
+=== Title
+
+=== Detail
+
+=== Status
+
+=== Instance
+
+=== Extension
+
+=== Logging
+
+== Security Considerations
