--- a/api/README.adoc
+++ b/api/README.adoc
@@ -2,6 +2,21 @@
 
 This is the API for the Problem Details.
 
+* MUST `application/problem+json`, `application/problem+xml`; SHOULD any, e.g. `+yaml`
+* SHOULD render `text/html`
+* map also `@Valid` REST params
+* logging: 4xx = DEBUG, 5xx = ERROR; configurable?
+* order of extensions is alphabetic (which is better for tests than random)
+* multiple extensions with the same name: undefined behavior
+* JAXB can't unmarshal a subclass with the same type and namespace
+* Security considerations: nothing dangerous in problem details (i.e. exception message); stack-trace in logs
+
+// TODO scan client classpath for @Type annotated exceptions (and document this in the spec and the annotation)
+// TODO inherited annotations
+// TODO cause annotations
+// TODO type factory, e.g. URL to OpenAPI
+// TODO instance factory, e.g. URL to the logging system filtering on an UUID
+
 == Mappings
 
 === Type
