--- a/README.adoc
+++ b/README.adoc
@@ -1,5 +1,5 @@
 = Problem Details
-:toc:
+:toc2:
 
 image::https://api.bintray.com/packages/t1/javaee-helpers/problem-details/images/download.svg[link="https://bintray.com/t1/javaee-helpers/problem-details/_latestVersion"]
 
