--- a/README.adoc
+++ b/README.adoc
@@ -2,10 +2,13 @@
 :toc2: right
 :toc-placement: manual
 :toclevels: 1
+:icons:
 
 image::https://api.bintray.com/packages/t1/javaee-helpers/problem-details/images/download.svg[link="https://bintray.com/t1/javaee-helpers/problem-details/_latestVersion"]
 
 toc::[]
+
+'''
 
 Maps standard and custom exceptions to http response bodies containing problem details as specified in https://tools.ietf.org/html/rfc7807[RFC-7807].
 
