--- a/README.adoc
+++ b/README.adoc
@@ -1,31 +1,15 @@
-= Problem Details
-:experimental:
-:toc: right
-:toc-placement: manual
-:toc-title: pass:[<b>Contents</b>]
-:toclevels: 1
+= Asciidoctor Demo
+:toc: preamble
+:numbered:
 :icons: font
-ifdef::env-github[]
-:tip-caption: :bulb:
-endif::[]
-ifndef::env-github[]
-:idprefix:
-:idseparator: -
-endif::[]
 
 image::https://api.bintray.com/packages/t1/javaee-helpers/problem-details/images/download.svg[link="https://bintray.com/t1/javaee-helpers/problem-details/_latestVersion"]
 
-toc::[]
-
-'''
-
 Maps standard and custom exceptions to http response bodies containing problem details as specified in https://tools.ietf.org/html/rfc7807[RFC-7807].
 
-On the server side, you can simply throw an exception, and most things will just work. Or use annotations on the exception to override the default behavior.
-
-On the client side, you can register an extension, so a type-safe exception is thrown for your code to catch.
-
 == Server Side Examples
+
+On the server side, you can simply throw an exception, and most things will just work. Or use annotations on the exception to override the default behavior.
 
 === Default Mapping
 
@@ -114,6 +98,8 @@ This will result in an exception body similar to:
 ---------------------------------------------------------------
 
 == Client Side Examples
+
+On the client side, a type-safe exception is thrown for your code to catch.
 
 === JAX-RS
 
