--- a/README.adoc
+++ b/README.adoc
@@ -1,4 +1,4 @@
-= Asciidoctor Demo
+= Problem Details
 :toc: preamble
 :numbered:
 :icons: font
@@ -135,6 +135,33 @@ The current RI is based on a JAX-RS `ClientResponseFilter` which brings some boi
 
 Other implementations may have other requirements and limitations.
 
+=== MicroProfile REST Client
+
+[source,java]
+---------------------------------------------------------------
+class OrderGateway {
+    static {
+        ProblemDetailExceptionRegistry.register(OutOfCreditException.class);
+    }
+
+    private OrderApi api = RestClientBuilder.newBuilder()
+        .baseUri("http://...")
+        .register(ProblemDetailResponseExceptionMapper.class)
+        .build(OrderApi.class);
+
+    public Shipment order(String articleId) {
+        try {
+            return api.order(1, article);
+        } catch (OutOfCreditException e) {
+            displayOutOfCredit(e.getBalance());
+            return null;
+        }
+    }
+}
+---------------------------------------------------------------
+
+Note that the registration of the `OutOfCreditException` in the `ProblemDetailExceptionRegistry` and the `ProblemDetailResponseExceptionMapper` in the `RestClientBuilder` is specific to the Spring Boot RI. Other implementations may have other requirements and limitations.
+
 === Spring Boot
 
 In Spring, a client could look like this:
@@ -143,7 +170,7 @@ In Spring, a client could look like this:
 ---------------------------------------------------------------
 class OrderGateway {
     static {
-        ProblemDetailJsonToExceptionBuilder.register(OutOfCreditException.class);
+        ProblemDetailExceptionRegistry.register(OutOfCreditException.class);
     }
 
     public Shipment order(String articleId) {
@@ -159,7 +186,7 @@ class OrderGateway {
 }
 ---------------------------------------------------------------
 
-Note that the registration of the `OutOfCreditException` with the `ProblemDetailJsonToExceptionBuilder` and the `ProblemDetailErrorHandler` in the `RestTemplate` is specific to the Spring Boot RI. Other implementations may have other requirements and limitations.
+Note that the registration of the `OutOfCreditException` in the `ProblemDetailExceptionRegistry` and the `ProblemDetailErrorHandler` in the `RestTemplate` is specific to the Spring Boot RI. Other implementations may have other requirements and limitations.
 
 == Module Structure
 
@@ -223,3 +250,5 @@ Currently fails due to lack of jdk11 support of the https://hub.docker.com/r/pay
 Builds a Spring Boot application containing the RI. The integration tests also start the application.
 
 You can specify a base URL in the system property `testcontainer-running` (e.g. `-Dtestcontainer-running=http://localhost:8080`), so the tests verify a running service. This is very handy while developing the implementation. This also works when the running service is the JAX-RS Test application (see above).
+
+// TODO OpenAPI Integration: read status codes and types from `throws`-declared exceptions
